--- a/src/app/pages/ncs/create/steps/step1/parceiro/parceiro.component.html
+++ b/src/app/pages/ncs/create/steps/step1/parceiro/parceiro.component.html
@@ -29,8 +29,8 @@
   </div>
 </p-dialog>
 
-<div class="row mb-0">
-  <div class="d-flex col">
+<div class="d-flex flex-row mb-0">
+  <div class="d-flex">
     <div class="cabecalho p-0 m-0">
       <h1>{{'newNC.step1.partner.title'| translate}}</h1>
       <p>
@@ -39,7 +39,7 @@
         {{'newNC.step1.partner.subtitle2'| translate}}
       </p>
     </div>
-    <div class="col-2" id="div-att-col2">
+    <div class="" id="div-att-col2">
       <p>
         <i class="pi pi-history"> </i>{{'newNC.step1.lastUpdate'| translate}} {{ returnUpdateTime() }}
       </p>
