--- a/src/app/pages/ncs/create/steps/step2/checkpoint/checkpoint-items/checkpoint-items.component.html
+++ b/src/app/pages/ncs/create/steps/step2/checkpoint/checkpoint-items/checkpoint-items.component.html
@@ -24,9 +24,9 @@
 
 
 
-<div class="input-box mt-3" *ngIf="returnNfScreen()">
-  <label class="mb-2 mt-3">{{'global.fileInput.title2'| translate}} </label>
-  <div class="div-attachment">
+<div class="mt-3" *ngIf="returnNfScreen()">
+  <label class="mb-2">{{'global.fileInput.title2'| translate}} </label>
+  <div class="div-attachment pb-3">
     <h1>{{'global.fileInput.subtitle'| translate}}</h1>
     <div
       class="white-background"
@@ -115,7 +115,7 @@
     </div>
   </div>
   <label class="mb-2 mt-3">{{'global.fileInput.title2'| translate}} </label>
-  <div class="div-attachment">
+  <div class="div-attachment pb-3">
     <h1>{{'global.fileInput.subtitle'| translate}}</h1>
     <div
             class="white-background"
