--- a/src/app/pages/ncs/sgq-evaluation/steps/evidence/evidence.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/steps/evidence/evidence.component.html
@@ -6,7 +6,7 @@
 </div>
 
 <div class="d-flex flex-row flex-wrap justify-content-between mt-4">
-  <div class="">
+  <div class="mt-1">
     <p-editor
       [style]="{ height: '210px', width: '700px', 'font-size': '25px' }"
       [(ngModel)]="sgqServ.sgq.text_area1"
@@ -50,7 +50,7 @@
             </p>
         </div>
     </div>-->
-  <div class="div-attachment">
+  <div class="div-attachment mt-1">
     <h1>{{ "global.fileInput.subtitle" | translate }}</h1>
     <div class="white-background" *ngIf="sgqServ.sgq.attachments.length == 0">
       <input
