--- a/src/app/pages/ncs/create/steps/step1/parceiro/parceiro.component.html
+++ b/src/app/pages/ncs/create/steps/step1/parceiro/parceiro.component.html
@@ -57,8 +57,8 @@
 
 
 
-<div class=" row-search d-flex mb-2 pl-0">
-  <div class="dropdown col ml-0 mt-0 px-0">
+<div class=" row-search d-flex mb-2 pl-0 mt-1">
+  <div class="dropdown col ml-0 mt-0 px-0 mt-1">
     <label>{{'newNC.step1.partner.partnerType'| translate}}</label>
     <select
       [(ngModel)]="nonComplicanceService.nc.tipos_parceiro_item"
@@ -71,7 +71,7 @@
     </select>
   </div>
 
-  <div class="ml-0 col-search col-7 px-0">
+  <div class="ml-0 col-search col-7 px-0 mt-1">
     <div class="d-flex justify-content-start" style="width: 100%">
       <p-autoComplete
         [(ngModel)]="nonComplicanceService.pesquisar"
