--- a/src/app/pages/ncs/about/view-nc/gerar-pdf-view/gerar-pdf-view.component.html
+++ b/src/app/pages/ncs/about/view-nc/gerar-pdf-view/gerar-pdf-view.component.html
@@ -36,9 +36,9 @@
     <div class="d-flex"></div>
     <div class="d-flex justify-content-end align-items-center mb-3"></div>
   </div>
-  <!-- <app-identify-nc></app-identify-nc>
+  <app-view-identify-nc></app-view-identify-nc>
   <div class="mt-3"></div>
-  <app-products-and-points></app-products-and-points> -->
+  <app-view-products-and-points></app-view-products-and-points>
 
   <div class="div-ident-parceiro d-flex flex-column flex-lg-row mt-3">
     <div class="dados-parceiro razao-social item">
@@ -93,7 +93,7 @@
     </div>
   </div>
   <div class="mt-3 mb-5">
-    <!-- <app-stakeholders></app-stakeholders> -->
+    <app-view-stakeholders></app-view-stakeholders>
   </div>
   <div class="d-flex flex-row align-items-center fotter">
     <div class="d-flex flex-column justify-content-center p-2">
