--- a/src/app/pages/ncs/create/steps/gerar-pdf/gerar-pdf.component.html
+++ b/src/app/pages/ncs/create/steps/gerar-pdf/gerar-pdf.component.html
@@ -47,7 +47,7 @@
         Descrição
       </h2>
       <p-editor
-        [(ngModel)]="this.nonComplicanceService.nc.text_area_nc"
+        [(ngModel)]="this.aboutService.nc.text_area_nc"
         [style]="{ height: '100px', border: '1px solid #dddddd' }"
         [readonly]="true"
       >
@@ -74,7 +74,7 @@
         Ações Imediatas
       </h2>
       <p-editor
-        [(ngModel)]="this.nonComplicanceService.nc.text_area_acoes"
+        [(ngModel)]="this.aboutService.nc.text_area_acoes"
         [style]="{ height: '100px', border: '1px solid #dddddd' }"
         [readonly]="true"
       >
@@ -93,7 +93,24 @@
     </div>
   </div>
   <div class="mt-3 mb-5">
-    <app-stakeholders></app-stakeholders>
+    <div class="card">
+    <p-table [value]="this.aboutService.nc.contacts">
+        <ng-template pTemplate="header">
+            <tr>
+                <th>{{'global.contacts.name'| translate}}</th>
+                <th>{{'global.contacts.email'| translate}}</th>
+                <th>{{'global.contacts.partner'| translate}}</th>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-contact let-i="rowIndex">
+            <tr>
+                <td>{{ contact.name }}</td>
+                <td>{{ contact.email }}</td>
+                <td>{{ contact.type }}</td>
+            </tr>
+        </ng-template>
+    </p-table>
+</div>
   </div>
   <div class="d-flex flex-row align-items-center fotter">
     <div class="d-flex flex-column justify-content-center p-2">
