--- a/src/app/pages/ncs/create/steps/step2/rejection-point/rejection-point-items/rejection-point-items.component.html
+++ b/src/app/pages/ncs/create/steps/step2/rejection-point/rejection-point-items/rejection-point-items.component.html
@@ -16,7 +16,7 @@
   <div class="row">
     <div class="col">
       <div class="p-fluid autoComplete">
-        <label class="mb-1">{{'newNC.step1.rejectionPoint.itTitle'| translate}}</label>
+        <label class="mb-1">{{'newNC.step1.rejectionPoint.itTitle'| translate}}{{isRequired()}}</label>
         <p-autoComplete
           class="p-autocomplete"
           [style]="{ width: '100%' }"
