--- a/src/app/pages/ncs/about/header/header.component.html
+++ b/src/app/pages/ncs/about/header/header.component.html
@@ -16,10 +16,10 @@
     </div>
     <div class="d-flex justify-content-end p-0">
         <div class="d-flex buttons">
-            <button type="button" class="btn btn-dark mr-2 disabled">
+<!--            <button type="button" class="btn btn-dark mr-2 disabled">
                 {{'global.ncData'| translate}}
                 <i class="bi bi-file-earmark-text"></i>
-            </button>
+            </button>-->
             <button type="button" class="btn btn-dark mr-2" (click)="gerarPdf()">
                 {{'about.export'| translate}}
                 <i class="bi bi-file-earmark-arrow-down" ></i>
