--- a/src/app/pages/ncs/create/steps/step4/products-and-points/products-and-points.component.html
+++ b/src/app/pages/ncs/create/steps/step4/products-and-points/products-and-points.component.html
@@ -4,19 +4,17 @@
     <div class="d-flex">
       <h2 class="mr-2">
         {{
-          this.nonComplicanceService.nc?.product?.name ||
-          "Produto"
+          this.nonComplicanceService.nc?.product?.description
         }}
       </h2>
       <p-chip>
         <i class="bi bi-ticket-perforated mr-2"></i>
-        {{ this.nonComplicanceService.nc?.product?.code  || "000000" }}
+        {{ this.nonComplicanceService.nc?.product?.code}}
       </p-chip>
     </div>
     <p class="d-block">
       {{
-      this.nonComplicanceService.nc?.product?.description ||
-      'global.dontApply'| translate
+      this.nonComplicanceService.nc?.product?.name
       }}
     </p>
   </div>
@@ -106,7 +104,7 @@
   </h2>
   <div class="d-flex dados-contato mb-3 ">
     <div class="contato-info d-flex flex-row mb-5 mr-5" *ngIf="this.nonComplicanceService.nc?.num_lote">
-      <i class="bi bi-123"></i>
+      <i class="bi bi-file-earmark-text"></i>
       <div>
         <span class="info-titulo">{{'newNC.step1.rejectionPoint.numBatch'| translate}}</span>
         <br />
@@ -116,7 +114,7 @@
       </div>
     </div>
     <div class="contato-info d-flex flex-row mb-5 mr-5" *ngIf="this.nonComplicanceService.nc?.num_ordem_compra">
-      <i class="bi bi-123"></i>
+      <i class="bi bi-file-earmark-text"></i>
       <div>
         <span class="info-titulo">{{'newNC.step1.rejectionPoint.numOC'| translate}}</span>
         <br />
@@ -126,7 +124,7 @@
       </div>
     </div>
     <div class="contato-info d-flex flex-row mb-5 mr-5" *ngIf="this.nonComplicanceService.nc?.instruction?.code">
-      <i class="bi bi-123"></i>
+      <i class="bi bi-file-earmark-text"></i>
       <div>
         <span class="info-titulo">{{'newNC.step1.rejectionPoint.it'| translate}}</span>
         <br />
@@ -138,7 +136,7 @@
       </div>
     </div>
     <div class="contato-info d-flex flex-row mb-5 mr-5" *ngIf="this.nonComplicanceService.nc?.procedure">
-      <i class="bi bi-123"></i>
+      <i class="bi bi-file-earmark-text"></i>
       <div>
         <span class="info-titulo">{{'newNC.step1.rejectionPoint.it'| translate}}</span>
         <br />
