--- a/src/app/pages/ncs/sgq-evaluation/steps/changes/changes.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/steps/changes/changes.component.html
@@ -6,7 +6,7 @@
 <div class="mt-4">
   <p-editor
     [(ngModel)]="this.sgqServ.sgq.text_area3"
-    [style]="{ height: '20vh' }"
+    [style]="{ height: '20vh', 'font-size': '25px' }"
     [modules]="{ counter: { container: '#counterCh', unit: 'character' } }"
   ></p-editor>
   <div id="counterCh" class="text-end">0</div>
