--- a/src/app/pages/ncs/about/view-nc/products-and-points/view-products-and-points.component.html
+++ b/src/app/pages/ncs/about/view-nc/products-and-points/view-products-and-points.component.html
@@ -112,7 +112,7 @@
     <div class="contato-info d-flex flex-row mb-5 mr-5" *ngIf="aboutSrvc.nc?.procedure">
       <i class="bi bi-123"></i>
       <div>
-        <span class="info-titulo">{{'newNC.step1.rejectionPoint.it'| translate}}</span>
+        <span class="info-titulo">PR</span>
         <br />
         <span class="info-dados">{{ aboutSrvc.nc?.procedure?.code|| "0" }}</span>
       </div>
