--- a/src/app/pages/ncs/about/costs/costs.component.html
+++ b/src/app/pages/ncs/about/costs/costs.component.html
@@ -1,46 +1,44 @@
 <div class="d-flex flex-lg-row flex-column justify-content-between">
-    <div class="d-flex">
-        <div class="cabecalho">
-            <div class="d-flex align-items-center">
-                <h1 class="mr-3">{{'about.costsComponent.title'| translate}}</h1>
-            </div>
-            <p>
-                {{'about.costsComponent.subtitle'| translate}}
-            </p>
-        </div>
+  <div class="d-flex">
+    <div class="cabecalho">
+      <div class="d-flex align-items-center">
+        <h1 class="mr-3">{{ "about.costsComponent.title" | translate }}</h1>
+      </div>
+      <p>
+        {{ "about.costsComponent.subtitle" | translate }}
+      </p>
     </div>
-    <div class="d-flex justify-content-end align-items-center mb-3">
-
-        <button class="btn btn-dark ml-3"
-        (click)="addDocumentDialog=true">
-            {{'about.costsComponent.newCostBtn'| translate}}
-            <i class="bi bi-plus"></i>
-        </button>
-    </div>
+  </div>
+  <div class="d-flex justify-content-end align-items-center mb-3">
+    <button class="btn btn-dark ml-3" (click)="addDocumentDialog = true">
+      {{ "about.costsComponent.newCostBtn" | translate }}
+      <i class="bi bi-plus"></i>
+    </button>
+  </div>
 </div>
 <h2 class="mr-4 text-black fs-5">
-    <i class="pi pi-copy"></i>
-    {{'about.costsComponent.documents.title'| translate}}
+  <i class="pi pi-copy"></i>
+  {{ "about.costsComponent.documents.title" | translate }}
 </h2>
 <div class="card mt-3">
-    <p-table  [value]="this.aboutSrvc.nc?.costs||[]">
-        <ng-template pTemplate="header">
-            <tr>
-                <th>{{'about.costsComponent.documents.document'| translate}}</th>
-                <th>{{'about.costsComponent.documents.date'| translate}}</th>
-                <th>{{'about.costsComponent.documents.attachedBy'| translate}}</th>
-                <th>{{'about.costsComponent.documents.total'| translate}}</th>
-                <th></th>
-            </tr>
-        </ng-template>
-        <ng-template pTemplate="body" let-doc>
-            <tr>
-                <td>{{ doc.file_name }}</td>
-                <td>{{ parseDate(doc.created_at) }}</td>
-                <td>{{ doc.author?.username }}</td>
-                <td>{{ format(doc.value) }}</td>
-                <td>
-                    <!-- <button
+  <p-table [value]="this.aboutSrvc.nc?.costs || []">
+    <ng-template pTemplate="header">
+      <tr>
+        <th>{{ "about.costsComponent.documents.document" | translate }}</th>
+        <th>{{ "about.costsComponent.documents.date" | translate }}</th>
+        <th>{{ "about.costsComponent.documents.attachedBy" | translate }}</th>
+        <th>{{ "about.costsComponent.documents.total" | translate }}</th>
+        <th></th>
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-doc>
+      <tr>
+        <td>{{ doc.file_name }}</td>
+        <td>{{ parseDate(doc.created_at) }}</td>
+        <td>{{ doc.author?.username }}</td>
+        <td>{{ format(doc.value) }}</td>
+        <td>
+          <!-- <button
                             pButton
                             type="button"
                             icon="bi bi-file-earmark-richtext"
@@ -68,81 +66,92 @@
   </p-table>
 </div>
 <p-confirmDialog #cd [style]="{ width: '50vw' }">
-    <ng-template pTemplate="footer">
-        <button type="button" class="btn btn-outline-dark" (click)="cd.reject()">
-            {{'global.reject'| translate}}
-        </button>
-        <button type="button" class="btn btn-dark" (click)="cd.accept()">
-            {{'about.costsComponent.acceptDel'| translate}}
-        </button>
-    </ng-template>
+  <ng-template pTemplate="footer">
+    <button type="button" class="btn btn-outline-dark" (click)="cd.reject()">
+      {{ "global.reject" | translate }}
+    </button>
+    <button type="button" class="btn btn-dark" (click)="cd.accept()">
+      {{ "about.costsComponent.acceptDel" | translate }}
+    </button>
+  </ng-template>
 </p-confirmDialog>
 <p-dialog [(visible)]="addDocumentDialog" [modal]="true" styleClass="p-fluid">
-    <ng-template pTemplate="header">
-        <div>
-            <h2>{{'about.costsComponent.newCostTitle'| translate}}</h2>
-            <h3>
-                {{'about.costsComponent.newCostSubtitle'| translate}}
-            </h3>
-        </div>
-    </ng-template>
-    <ng-template pTemplate="content">
-    <div class="editar-campo">
-        <label>{{'about.costsComponent.documents.total'| translate}} *</label>
-        <input
-                currencyMask [(ngModel)]="doc.value" [options]="{ prefix: 'R$ ', thousands: '.', decimal: ',' }"
-        />
-        <div class="mt-3">
-            <label>{{'about.costsComponent.attachTitle'| translate}} *</label>
-            <div class="div-attachment">
-                <h1>{{'about.costsComponent.attachSubtitle'| translate}}</h1>
-                <div
-                        class="white-background"
-                        *ngIf="!haveFiles()"
-                >
-                    <input
-                            type="file"
-
-                            class="input-attachment"
-                            (change)="onUpload($event)"
-                            multiple
-                            required
-                    />
-                    <i class="pi pi-cloud-upload"></i>
-                    <p>
-                        {{'global.fileInput.description'| translate}}
-                    </p>
-                </div>
-                <div
-                        class="white-background-files"
-                        *ngIf="haveFiles()"
-                >
-                    <button
-                            type="button"
-                            (click)="clearFile()"
-                            class="btn btn-light"
-                    >
-                        <i class="pi pi-replay"></i>
-                    </button>
-                    <div *ngFor="let item of files" class="d-flex justify-content-center align-items-center files">
-                        {{ item.name }} <button (click)="clearById(item.name)"><i class="bi bi-x"></i></button>
-                    </div>
-                </div>
-            </div>
-        </div>
-
+  <ng-template pTemplate="header">
+    <div>
+      <h2>{{ "about.costsComponent.newCostTitle" | translate }}</h2>
+      <h3>
+        {{ "about.costsComponent.newCostSubtitle" | translate }}
+      </h3>
     </div>
-    </ng-template>
-    <ng-template pTemplate="footer">
-        <div class="">
-            <button
-                    type="button"
-                    class="btn btn-dark"
-                    (click)="save()"
-                    [disabled]="!fileChosen"
+  </ng-template>
+  <ng-template pTemplate="content">
+    <div class="editar-campo">
+      <label>{{ "about.costsComponent.documents.total" | translate }} *</label>
+      <input
+        currencyMask
+        [(ngModel)]="doc.value"
+        [options]="{ prefix: 'R$ ', thousands: '.', decimal: ',' }"
+      />
+      <div class="mt-3">
+        <label>{{ "about.costsComponent.attachTitle" | translate }} *</label>
+        <div class="div-attachment">
+          <h1>{{ "about.costsComponent.attachSubtitle" | translate }}</h1>
+          <div class="white-background" *ngIf="!haveFiles()">
+            <input
+              type="file"
+              class="input-attachment"
+              (change)="onUpload($event)"
+              multiple
+              required
+            />
+            <i class="pi pi-cloud-upload"></i>
+            <p>
+              {{ "global.fileInput.description" | translate }}
+            </p>
+          </div>
+          <div class="white-background-files" *ngIf="haveFiles()">
+            <div class="d-flex justify-content-start" style="width: 100%">
+              <label for="inputTag" style="cursor: pointer">
+                <i
+                  class="bi bi-plus-circle-fill"
+                  style="font-size: 30px; color: rgb(0, 91, 123)"
+                ></i>
+                <input
+                  id="inputTag"
+                  type="file"
+                  accept=".pdf,image/jpeg,image/png,xlsx,xls"
+                  class=""
+                  (change)="onUpload($event)"
+                  style="display: none"
+                  multiple
+                />
+              </label>
+            </div>
+            <div
+              *ngFor="let item of files"
+              class="d-flex justify-content-center align-items-center files"
             >
-                {{'about.costsComponent.save'| translate}} <i class="bi bi-check2"></i>
-            </button>
+              {{ item.name }}
+              <button (click)="clearById(item.name)">
+                <i class="bi bi-x-circle"></i>
+              </button>
+            </div>
+          </div>
         </div>
-    </ng-template>
+      </div>
+    </div>
+  </ng-template>
+  <ng-template pTemplate="footer">
+    <div class="">
+      <button
+        type="button"
+        class="btn btn-dark"
+        (click)="save()"
+        [disabled]="!fileChosen"
+      >
+        {{ "about.costsComponent.save" | translate }}
+        <i class="bi bi-check2"></i>
+      </button>
+    </div>
+  </ng-template>
 </p-dialog>
