--- a/src/app/pages/ncs/about/about.component.html
+++ b/src/app/pages/ncs/about/about.component.html
@@ -21,7 +21,7 @@
   </p-tabPanel>
 
   <p-tabPanel
-    [disabled]=""
+    [disabled]="checkDisableCosts()"
     [header]="'about.costs' | translate"
     leftIcon="bi bi-coin"
   >
