--- a/src/app/header/menu/menu.component.css
+++ b/src/app/header/menu/menu.component.css
@@ -1,9 +1,6 @@
-
-
-
-.logo{
-  height: 50px; 
-  width: auto;
+.logo {
+  height: 50px;
+  width: 50px;
 }
 
 .designation {
@@ -22,21 +19,18 @@
   border-radius: 50%;
   margin-right: 10px;
 }
-
-
-
 ::ng-deep .p-menuitem-text {
-    color:white !important;
-    
+  color: white !important;
 }
 
 ::ng-deep .p-menuitem-icon {
-  color:white !important;
-  
+  color: white !important;
 }
 
-::ng-deep .p-menubar{
+::ng-deep .p-menubar {
   background-color: rgb(0, 91, 123) !important;
+  border: none;
+  border-radius: 0;
 }
 
 ::ng-deep .p-menuitem {
@@ -44,7 +38,6 @@
   margin-left: 10px;
 }
 
-::ng-deep .p-menuitem-link:hover{
+::ng-deep .p-menuitem-link:hover {
   background-color: lightgrey !important;
 }
-
