--- a/src/app/header/menu/menu.component.html
+++ b/src/app/header/menu/menu.component.html
@@ -1,24 +1,38 @@
-
 <p-menubar [model]="items">
   <ng-template pTemplate="start">
-    <img class="logo" src="../assets/images/logo3.png" alt="Electroson">
+    <img class="logo" src="../assets/images/logo3.png" alt="Electroson" />
   </ng-template>
   <ng-template pTemplate="end">
-    <div style="display:flex">
+    <div style="display: flex">
       <img class="avatar" src="../assets/images/avatar.png" alt="Avatar" />
-      <div style="display: flex; flex-direction:column;">
-        <span class="name-user">{{user?.username}}</span>
-        <div style="display: flex; flex-direction:row;">
-          <a style="margin-right: 5px;" type="button" style="color: black;" (click)="changeLanguage('pt')" ><span style="margin-right: 5px;" class="flag-icon flag-icon-br"></span></a>  
-          <a style="margin-right: 5px;" type="button" style="color: black;" (click)="changeLanguage('en')"><span style="margin-right: 5px;" class="flag-icon flag-icon-us"></span></a>  
-          <a type="button" style="color: black;" (click)="changeLanguage('us')"><span class="flag-icon flag-icon-es"></span></a>  
-
+      <div style="display: flex; flex-direction: column">
+        <span class="name-user">{{ user?.username }}</span>
+        <div style="display: flex; flex-direction: row">
+          <a
+            style="margin-right: 5px"
+            type="button"
+            style="color: black"
+            (click)="changeLanguage('pt')"
+            ><span
+              style="margin-right: 5px"
+              class="flag-icon flag-icon-br"
+            ></span
+          ></a>
+          <a
+            style="margin-right: 5px"
+            type="button"
+            style="color: black"
+            (click)="changeLanguage('en')"
+            ><span
+              style="margin-right: 5px"
+              class="flag-icon flag-icon-us"
+            ></span
+          ></a>
+          <a type="button" style="color: black" (click)="changeLanguage('us')"
+            ><span class="flag-icon flag-icon-es"></span
+          ></a>
         </div>
-
-        
-        
       </div>
     </div>
   </ng-template>
 </p-menubar>
-
