--- a/src/app/pages/dialogs/dados-nc/ncs-create-stepper.component.html
+++ b/src/app/pages/dialogs/dados-nc/ncs-create-stepper.component.html
@@ -1,4 +1,3 @@
-
 <div class="stepper-content">
   <div class="stepper-buttons">
     <div class="p-0">
@@ -20,19 +19,15 @@
       ></p-steps>
     </div>
     <div class="d-flex justify-content-end p-0 last-button">
-        <div style="display: flex; flex-direction:row;">
-
-        <button
-          type="button"
-          (click)="nextStep()"
-
-          class="btn btn-dark btn-sm"
-        >
+      <div style="display: flex; flex-direction: row">
+        <button type="button" (click)="nextStep()" class="btn btn-dark btn-sm">
           {{ getNextPageBtnLabel() }}
           <i [class]="getNextPageBtnIcon()"></i>
         </button>
 
-        <button *ngIf="stepPosition == 2" style="margin-left:15px;"
+        <button
+          *ngIf="stepPosition == 2"
+          style="margin-left: 15px"
           type="button"
           (click)="generatePDF()"
           class="btn btn-dark btn-sm"
@@ -45,11 +40,11 @@
   <div class="content-create-nc" id="pdfContent">
     <div *ngIf="stepPosition === 0">
       <app-identificacao-da-nc></app-identificacao-da-nc>
-      <div class="d-flex">
-        <div class="col-6">
+      <div class="d-flex pl-0 pr-0">
+        <div class="">
           <app-parceiro></app-parceiro>
         </div>
-        <div >
+        <div>
           <app-product></app-product>
         </div>
       </div>
@@ -58,10 +53,10 @@
       </div>
       <div class="row">
         <div class="col">
-          <app-checkpoint ></app-checkpoint>
+          <app-checkpoint></app-checkpoint>
         </div>
         <div class="col">
-          <app-rejection-point ></app-rejection-point>
+          <app-rejection-point></app-rejection-point>
         </div>
       </div>
     </div>
@@ -74,7 +69,7 @@
     </div>
     <div *ngIf="stepPosition === 2">
       <app-step4
-              (changeStepPosition)="changeStepByPosition($event)"
+        (changeStepPosition)="changeStepByPosition($event)"
       ></app-step4>
     </div>
   </div>
