--- a/src/app/pages/ncs/create-prop/steps/step2/reasons-why.component.html
+++ b/src/app/pages/ncs/create-prop/steps/step2/reasons-why.component.html
@@ -9,6 +9,7 @@
     <div class="d-flex justify-content-end align-items-center mb-3" *ngIf="showAllTextAreas">
         <button type="button"
                 class="btn btn-dark"
+                style="background-color: #00344D;"
                 (click)="showAllTextAreas=false"
         >
             <i class="bi bi-arrow-left"></i>
