--- a/src/app/pages/ncs/create-prop/steps/step3/action-plan-dialog/action-plan-dialog.component.html
+++ b/src/app/pages/ncs/create-prop/steps/step3/action-plan-dialog/action-plan-dialog.component.html
@@ -33,10 +33,10 @@
     </div>
 </div>
 <div class="d-flex justify-content-end mt-5">
-    <button class="btn btn-outline-dark mr-3" (click)="close()">
+    <button class="btn btn-outline-warning mr-3" (click)="close()">
         {{'global.cancel'| translate}}
     </button>
-    <button class="btn btn-dark" [disabled]="!action.name||!action.deadline||!action.responsible||!action.status" (click)="save()">
+    <button class="btn btn-dark" style="background-color: #00344D;" [disabled]="!action.name||!action.deadline||!action.responsible||!action.status" (click)="save()">
         {{'global.confirm'| translate}}
         <i class="bi bi-check2"> </i>
     </button>
