--- a/src/app/pages/ncs/create/steps/step2/checkpoint/checkpoint-items/checkpoint-items.component.html
+++ b/src/app/pages/ncs/create/steps/step2/checkpoint/checkpoint-items/checkpoint-items.component.html
@@ -75,6 +75,7 @@
         <a      target="_blank"
                 href="ncs/import"
                 role="button"
+                style="background-color: #00344D;"
                 class="btn btn-dark"
         >
           {{'newNC.step1.rejectionPoint.updatePr'| translate}}
