--- a/src/app/pages/ncs/create/steps/step4/products-and-points/products-and-points.component.html
+++ b/src/app/pages/ncs/create/steps/step4/products-and-points/products-and-points.component.html
@@ -147,7 +147,7 @@
   <div class="dados-parceiro col razao-social">
     <p-editor
             [(ngModel)]="this.nonComplicanceService.nc.text_area_reject_point"
-            [style]="{ height: '100%', border: '0px solid #dddddd'}"
+            [style]="{ height: '100%', border: '0px solid #dddddd','font-size': '25px'}"
             [readonly]="true"
     >
       <ng-template pTemplate="header" hidden> </ng-template>
