--- a/src/app/pages/attach/attach.component.css
+++ b/src/app/pages/attach/attach.component.css
@@ -32,11 +32,12 @@ label {
 }
 
 .div-attachment h1 {
-    margin-top: 5px;
     font-size: 25px;
-    color: rgb(89, 89, 89);
+    font-weight: 500;
+    margin-top: 5px;
 
 }
+
 
 .white-background {
     display: flex;
