--- a/src/app/pages/ncs/about/costs/costs.component.css
+++ b/src/app/pages/ncs/about/costs/costs.component.css
@@ -48,9 +48,9 @@ label {
     background-color: rgb(243, 243, 243);
 }
 .div-attachment h1 {
-    margin-top: 5px;
     font-size: 25px;
-    color: rgb(89, 89, 89);
+    font-weight: 500;
+    margin-top: 5px;
 
 }
 
