--- a/src/app/pages/ncs/about/costs/costs.component.html
+++ b/src/app/pages/ncs/about/costs/costs.component.html
@@ -10,7 +10,7 @@
     </div>
   </div>
   <div class="d-flex justify-content-end align-items-center mb-3">
-    <button class="btn btn-dark ml-3" (click)="addDocumentDialog = true">
+    <button class="btn btn-dark ml-3" style="background-color: #00344D;" (click)="addDocumentDialog = true">
       {{ "about.costsComponent.newCostBtn" | translate }}
       <i class="bi bi-plus"></i>
     </button>
@@ -67,10 +67,10 @@
 </div>
 <p-confirmDialog #cd [style]="{ width: '50vw' }">
   <ng-template pTemplate="footer">
-    <button type="button" class="btn btn-outline-dark" (click)="cd.reject()">
+    <button type="button" class="btn btn-outline-warning" (click)="cd.reject()">
       {{ "global.reject" | translate }}
     </button>
-    <button type="button" class="btn btn-dark" (click)="cd.accept()">
+    <button type="button" class="btn btn-dark" style="background-color: #00344D;" (click)="cd.accept()">
       {{ "about.costsComponent.acceptDel" | translate }}
     </button>
   </ng-template>
@@ -146,6 +146,7 @@
       <button
         type="button"
         class="btn btn-dark"
+        style="background-color: #00344D;"
         (click)="save()"
         [disabled]="!fileChosen"
       >
