--- a/src/app/pages/ncs/about/header/header.component.html
+++ b/src/app/pages/ncs/about/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="header-create-nc" >
     <div class="p-0">
         <div class="d-flex align-items-center">
-            <button type="button" class="btn btn-dark" routerLink="/ncs">
+            <button type="button" class="btn btn-dark" style="background-color: #00344D;" routerLink="/ncs">
                 <i class="pi pi-home"></i>
                 {{'import.home'| translate}}
             </button>
@@ -20,7 +20,7 @@
                 {{'global.ncData'| translate}}
                 <i class="bi bi-file-earmark-text"></i>
             </button>-->
-            <button type="button" class="btn btn-dark mr-2" (click)="gerarPdf()">
+            <button type="button" class="btn btn-dark mr-2" style="background-color: #00344D;" (click)="gerarPdf()">
                 {{'about.export'| translate}}
                 <i class="bi bi-file-earmark-arrow-down" ></i>
             </button>
