--- a/src/app/pages/ncs/about/proposal/proposal.component.html
+++ b/src/app/pages/ncs/about/proposal/proposal.component.html
@@ -26,7 +26,7 @@
                     <i class="bi bi-arrows-collapse"></i>
                     {{'global.colapse'| translate}}
                 </button>
-                <button class="ml-2 btn btn-dark btn-sm" (click)="goPlaces()">Editar <i class="bi bi-pencil-fill ml-1"></i></button>
+                <button class="ml-2 btn btn-dark btn-sm" style="background-color: #00344D;" (click)="goPlaces()">Editar <i class="bi bi-pencil-fill ml-1"></i></button>
             </div>
         </div>
         <p-accordion [multiple]="true">
@@ -294,7 +294,7 @@
     <h5 class="text-center">{{'about.proposalComponent.ready3'| translate}}</h5>
     
     <div class="text-center">
-        <a href="/ncs/createProp/{{id}}" role="button" class="btn btn-dark">
+        <a href="/ncs/createProp/{{id}}" role="button" class="btn btn-dark" style="background-color: #00344D;">
             {{'about.proposalComponent.createBtn'| translate}}
             <i class="bi bi-file-earmark-medical"></i>
         </a>
