--- a/src/app/pages/ncs/about/sgq-evaluation/sgq-evaluation.component.html
+++ b/src/app/pages/ncs/about/sgq-evaluation/sgq-evaluation.component.html
@@ -12,20 +12,9 @@
         </div>
 
     </div>
-    <div class="image-box d-flex align-items-center justify-content-center mt-5">
-        <img *ngIf="!(aboutSrv.nc?.proposalSolution && aboutSrv.nc?.costs?.length>0)" src="../../../../../../../assets/images/Ilustrações3.svg" alt="" />
-    </div>
-    <div *ngIf="!(aboutSrv.nc?.proposalSolution && aboutSrv.nc?.costs?.length>0)" class="mt-3">
-        <h2 class="text-center text-black">{{'about.sgqEvalComponent.requiredSteps.title1'| translate}}</h2>
-        <h3 class="text-center text-black">{{'about.sgqEvalComponent.requiredSteps.title2'| translate}}</h3>
-        <h5 class="text-center">{{'about.sgqEvalComponent.requiredSteps.title3'| translate}}</h5>
-    </div>
-    <div *ngIf="aboutSrv.nc?.proposalSolution && aboutSrv.nc?.costs?.length>0" class="mt-3">
-
-    </div>
 
     <div class="text-center">
-        <button type="button" class="btn btn-dark" [disabled]="!(aboutSrv.nc?.proposalSolution && aboutSrv.nc?.costs?.length>0)" routerLink="../../sgq/{{id}}">
+        <button type="button" class="btn btn-dark" style="background-color: #00344D;" [disabled]="!(aboutSrv.nc?.proposalSolution && aboutSrv.nc?.costs?.length>0)" routerLink="../../sgq/{{id}}">
             {{'about.sgqEvalComponent.createBtn'| translate}}
             <i class="bi bi-file-earmark-medical"></i>
         </button>
@@ -60,7 +49,7 @@
                 <i class="bi bi-arrows-collapse"></i>
                 {{'global.colapse'| translate}}
             </button>
-            <button class="btn btn-dark btn-sm ml-3" routerLink="../../sgq/{{id}}">
+            <button class="btn btn-dark btn-sm ml-3" style="background-color: #00344D;" routerLink="../../sgq/{{id}}">
                 {{'about.sgqEvalComponent.editBtn'| translate}}
                 <i class="bi bi-pencil-square"></i>
             </button>
