--- a/src/app/pages/ncs/about/view-nc/view-nc.component.html
+++ b/src/app/pages/ncs/about/view-nc/view-nc.component.html
@@ -25,7 +25,7 @@
       <i class="bi bi-arrows-collapse"></i>
       {{'global.colapse'| translate}}
     </button>
-    <button class="btn btn-dark btn-sm ml-2">
+    <button class="btn btn-dark btn-sm ml-2" style="background-color: #00344D;">
       {{'about.ncView.editBtn'| translate}}
       <i class="bi bi-pencil-square"></i>
     </button>
