--- a/src/app/pages/ncs/create-prop/create-prop-header/create-prop-header.component.html
+++ b/src/app/pages/ncs/create-prop/create-prop-header/create-prop-header.component.html
@@ -1,7 +1,7 @@
 <div class="header-create-nc">
     <div class="p-0">
         <div class="d-flex">
-            <button routerLink="/ncs/about/{{id}}" type="button" class="btn btn-dark">
+            <button routerLink="/ncs/about/{{id}}" style="background-color: #00344D;" type="button" class="btn btn-dark">
                 <i class="pi pi-home"></i>
                 {{'about.backToNC'| translate}}
             </button>
@@ -16,15 +16,15 @@
     </div>
     <div class="d-flex justify-content-end p-0">
         <div class="d-flex buttons">
-            <button type="button" class="btn btn-outline-dark mr-2">
+            <button type="button" class="btn btn-outline-warning mr-2">
                 {{'global.cancel'| translate}}
                 <i class="pi pi-times"></i>
             </button>
-            <button type="button" class="btn btn-dark mr-2" (click)="openDados()">
+            <button type="button" class="btn btn-dark mr-2" style="background-color: #00344D;" (click)="openDados()">
                 {{'global.ncData'| translate}}
                 <i class="bi bi-file-earmark-medical"></i>
             </button>
-            <button (click)="saveProp()" type="button" class="btn btn-dark">
+            <button (click)="saveProp()" type="button" class="btn btn-dark" style="background-color: #00344D;">
                 {{'global.save'| translate}}
             <i class="pi pi-save"></i>
         </button>
