--- a/src/app/pages/ncs/create-prop/steps/step1/ishikawa-diagram.component.html
+++ b/src/app/pages/ncs/create-prop/steps/step1/ishikawa-diagram.component.html
@@ -6,7 +6,7 @@
         </p>
     </div>
     <div class="d-flex justify-content-end align-items-center mb-3">
-        <button class="btn btn-dark ml-3">
+        <button class="btn btn-dark ml-3" style="background-color: #00344D;">
             {{ "createProp.step1.descBtn" | translate }}
             <i class="bi bi-file-earmark-medical"></i>
         </button>
