--- a/src/app/pages/ncs/create-prop/steps/step3/action-plan.component.html
+++ b/src/app/pages/ncs/create-prop/steps/step3/action-plan.component.html
@@ -49,7 +49,7 @@
         </div>
     </div>
     <div class="d-flex">
-        <button class="btn btn-dark my-auto" (click)="addAction()"
+        <button class="btn btn-dark my-auto" style="background-color: #00344D;" (click)="addAction()"
                 [disabled]="!name||!date||!selectedResp||!selectedStatus">
             {{'createProp.step2.addAction'| translate}}
             <i class="bi bi-plus"></i>
@@ -96,10 +96,10 @@
 </div>
 <p-confirmDialog #cd [style]="{ width: '50vw' }">
     <ng-template pTemplate="footer">
-        <button type="button" class="btn btn-outline-dark" (click)="cd.reject()">
+        <button type="button" class="btn btn-outline-warning" (click)="cd.reject()">
             {{'global.reject'| translate}}
         </button>
-        <button type="button" class="btn btn-dark" (click)="cd.accept()">
+        <button type="button" class="btn btn-dark" style="background-color: #00344D;" (click)="cd.accept()">
             {{'about.costsComponent.acceptDel'| translate}}
         </button>
     </ng-template>
