--- a/src/app/pages/ncs/create-prop/steps/step5/review-infomations.component.html
+++ b/src/app/pages/ncs/create-prop/steps/step5/review-infomations.component.html
@@ -35,7 +35,7 @@
                     <i class="bi bi-suit-diamond"></i>
                     {{'about.proposalComponent.ishikawaDiagram'| translate}}
                 </p>
-                <button class="btn btn-dark red" (click)="goToStepById(0)">
+                <button class="btn btn-dark red" style="background-color: #00344D;" (click)="goToStepById(0)">
                     <i class="bi bi-pencil mr-1"></i>
                     {{'global.edit'| translate}}
                 </button>
@@ -113,7 +113,7 @@
                     <i class="bi bi-dice-5"></i>
                     {{'about.proposalComponent.5why'| translate}}
                 </p>
-                <button class="btn btn-dark red" (click)="goToStepById(1)">
+                <button class="btn btn-dark red" style="background-color: #00344D;" (click)="goToStepById(1)">
                     <i class="bi bi-pencil mr-1"></i>
                     {{'global.edit'| translate}}
                 </button>
@@ -191,7 +191,7 @@
                     <i class="bi bi-geo"></i>
                     {{'about.proposalComponent.actionPlan'| translate}}
                 </p>
-                <button class="btn btn-dark red" (click)="goToStepById(1)">
+                <button class="btn btn-dark red" style="background-color: #00344D;" (click)="goToStepById(1)">
                     <i class="bi bi-pencil mr-1"></i>
                     {{'global.edit'| translate}}
                 </button>
@@ -227,7 +227,7 @@
                     <i class="bi bi-envelope"></i>
                     {{'global.contacts.notifications'| translate}}
                 </p>
-                <button class="btn btn-dark red" (click)="goToStepById(3)">
+                <button class="btn btn-dark red" style="background-color: #00344D;" (click)="goToStepById(3)">
                     <i class="bi bi-pencil mr-1"></i>
                     {{'global.edit'| translate}}
                 </button>
