--- a/src/app/pages/ncs/create/steps/step1/descricao-nc/descricao-nc.component.css
+++ b/src/app/pages/ncs/create/steps/step1/descricao-nc/descricao-nc.component.css
@@ -56,10 +56,10 @@ textarea {
   min-height: 210px;
 }
 .div-attachment h1 {
-  margin-top: 5px;
   font-size: 25px;
-  color: rgb(89, 89, 89);
- 
+  font-weight: 500;
+  margin-top: 5px;
+  color: black;
 }
 
 .white-background {
