--- a/src/app/pages/ncs/create/steps/step1/descricao-nc/descricao-nc.component.html
+++ b/src/app/pages/ncs/create/steps/step1/descricao-nc/descricao-nc.component.html
@@ -26,7 +26,7 @@
   <div class="col col-editor">
     <label>{{'newNC.step2.ncText'| translate}}</label>
     <p-editor
-      [style]="{ height: '200px' }"
+      [style]="{ height: '200px','font-size': '25px' }"
       [(ngModel)]="this.nonComplicanceService.nc.text_area_nc"
       class="p-editor"
       [modules]="{counter: {container: '#counterDescNC',unit: 'character'}}"
@@ -54,7 +54,7 @@
   <div class="col col-editor">
     <label for="desc-area">{{'newNC.step2.actionsText'| translate}} *</label>
     <p-editor
-      [style]="{ height: '200px' }"
+      [style]="{ height: '200px','font-size': '25px' }"
       [(ngModel)]="this.nonComplicanceService.nc.text_area_acoes"
       [modules]="{counter: {container: '#counterACI',unit: 'character'}}"
     ></p-editor>
