--- a/src/app/pages/ncs/create/steps/step2/checkpoint/checkpoint-items/checkpoint-items.component.css
+++ b/src/app/pages/ncs/create/steps/step2/checkpoint/checkpoint-items/checkpoint-items.component.css
@@ -39,12 +39,11 @@ label {
 }
 
 .div-attachment h1 {
-    margin-top: 5px;
     font-size: 25px;
-    color: rgb(89, 89, 89);
-
+    font-weight: 500;
+    margin-top: 5px;
+    color: black;
 }
-
 .white-background {
     display: flex;
     align-items: center;
@@ -164,6 +163,7 @@ font-size: 15px;
     border-radius: 5px;
     border: 2px solid rgb(51, 51, 51);
     height: 36px;
+    width: 145%;
 }
 
 .auto-complete-title {
