--- a/src/app/pages/ncs/create/steps/step2/product/product.component.html
+++ b/src/app/pages/ncs/create/steps/step2/product/product.component.html
@@ -14,7 +14,7 @@
         {{ "newNC.step1.lastUpdate" | translate }}
         {{ returnUpdateTime() }}
       </p>
-      <a target="_blank" href="ncs/import" role="button" class="btn btn-dark">
+      <a target="_blank" href="ncs/import" role="button" class="btn btn-dark" style="background-color: #00344D;">
         {{ "newNC.step1.updateBtn" | translate }}
         <i class="pi pi-download" id="icon-button"></i>
       </a>
