--- a/src/app/pages/ncs/create/steps/step4/revisar-info.component.html
+++ b/src/app/pages/ncs/create/steps/step4/revisar-info.component.html
@@ -40,7 +40,7 @@
           <i class="bi bi-file-earmark-text"></i>
           {{'global.ncData'| translate}}
         </p>
-        <button class="btn btn-dark red" (click)="goToStepById(0)">
+        <button class="btn btn-dark red" style="background-color: #00344D;" (click)="goToStepById(0)">
           <i class="bi bi-pencil mr-1"></i>
           {{'global.edit'| translate}}
         </button>
@@ -59,7 +59,7 @@
           <i class="bi bi-box-seam"></i>
           {{'global.description'| translate}}
         </p>
-        <button class="btn btn-dark red" (click)="goToStepById(1)">
+        <button class="btn btn-dark red" style="background-color: #00344D;" (click)="goToStepById(1)">
           <i class="bi bi-pencil mr-1"></i>
           {{'global.edit'| translate}}
         </button>
@@ -141,7 +141,7 @@
           <i class="bi bi-file-earmark-text"></i>
           {{'global.contacts.notifications'| translate}}
         </p>
-        <button class="btn btn-dark red" (click)="goToStepById(2)">
+        <button class="btn btn-dark red" style="background-color: #00344D;" (click)="goToStepById(2)">
           <i class="bi bi-pencil mr-1"></i>
           {{'global.edit'| translate}}
         </button>
