--- a/src/app/pages/ncs/sgq-evaluation/sgq-header/sgq-header.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/sgq-header/sgq-header.component.html
@@ -4,6 +4,7 @@
       <button
         routerLink="/ncs/about/{{ id }}"
         type="button"
+        style="background-color: #00344D;"
         class="btn btn-dark"
       >
         <i class="pi pi-home"></i>
@@ -20,15 +21,15 @@
   </div>
   <div class="d-flex justify-content-end p-0">
     <div class="d-flex buttons">
-      <button type="button" class="btn btn-outline-dark mr-2">
+      <button type="button" class="btn btn-outline-warning mr-2">
         {{ "global.cancel" | translate }}
         <i class="pi pi-times"></i>
       </button>
-      <button type="button" class="btn btn-dark mr-2" disabled>
+      <button type="button" class="btn btn-dark mr-2" style="background-color: #00344D;" disabled>
         {{ "global.ncData" | translate }}
         <i class="bi bi-file-earmark-medical"></i>
       </button>
-      <button type="button" class="btn btn-dark" (click)="salvarSGQ()">
+      <button type="button" class="btn btn-dark" style="background-color: #00344D;" (click)="salvarSGQ()">
         {{ "global.save" | translate }}
         <i class="pi pi-save"></i>
       </button>
