--- a/src/app/pages/ncs/sgq-evaluation/sgq-stepper/sgq-stepper.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/sgq-stepper/sgq-stepper.component.html
@@ -4,6 +4,7 @@
       <button
         type="button"
         class="btn btn-dark btn-sm"
+        style="background-color: #00344D;"
         (click)="backStep()"
         [disabled]="isFirstStep()"
       >
@@ -25,6 +26,7 @@
           (click)="nextStep()"
           [disabled]="disableButton()"
           class="btn btn-dark btn-sm"
+          style="background-color: #00344D;"
         >
           {{ getNextPageBtnLabel() }}
           <i [class]="getNextPageBtnIcon()"></i>
