--- a/src/app/pages/ncs/sgq-evaluation/steps/evidence/evidence.component.css
+++ b/src/app/pages/ncs/sgq-evaluation/steps/evidence/evidence.component.css
@@ -30,6 +30,7 @@ input {
     border-radius: 5px;
     padding: 8px;
     height: 265px;
+    width: 480px;
     text-align: center;
     background-color: rgb(243, 243, 243);
 }
@@ -44,10 +45,10 @@ input {
 }
 
 .div-attachment h1 {
-    margin-top: 5px;
     font-size: 25px;
-    color: rgb(89, 89, 89);
-
+    font-weight: 500;
+    margin-top: 5px;
+    color: black;
 }
 
 .white-background {
