--- a/src/app/pages/ncs/sgq-evaluation/steps/notifications/notifications.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/steps/notifications/notifications.component.html
@@ -8,7 +8,7 @@
     </div>
   </div>
   <div class="col-4 d-flex justify-content-end align-items-center">
-    <button iconPos="right" class="btn btn-dark" (click)="showAddContacts()">
+    <button iconPos="right" class="btn btn-dark" style="background-color: #00344D;" (click)="showAddContacts()">
       {{ "global.contacts.addBtn" | translate }}<i class="pi pi-plus"></i>
     </button>
   </div>
@@ -99,6 +99,7 @@
       <button
         type="button"
         class="btn btn-dark col-3"
+        style="background-color: #00344D;"
         (click)="createNewContact()"
       >
         {{ "global.contacts.create" | translate }}
@@ -142,7 +143,7 @@
     <div class="d-flex justify-content-end">
       <button
         type="button"
-        class="btn btn-outline-dark"
+        class="btn btn-outline-warning"
         (click)="hideAddContacts()"
       >
         {{ "primeng.cancel" | translate }}
@@ -150,6 +151,7 @@
       <button
         type="button"
         class="btn btn-dark"
+        style="background-color: #00344D;"
         [disabled]="selectedContacts.length == 0"
         (click)="saveSelection()"
       >
@@ -161,10 +163,10 @@
 
 <p-confirmDialog #cd [style]="{ width: '50vw' }">
   <ng-template pTemplate="footer">
-    <button type="button" class="btn btn-outline-dark" (click)="cd.reject()">
+    <button type="button" class="btn btn-outline-warning" (click)="cd.reject()">
       {{ "global.reject" | translate }}
     </button>
-    <button type="button" class="btn btn-dark" (click)="cd.accept()">
+    <button type="button" class="btn btn-dark" style="background-color: #00344D;" (click)="cd.accept()">
       {{ "global.contacts.accept" | translate }}
     </button>
   </ng-template>
