--- a/src/app/pages/ncs/sgq-evaluation/steps/reoccurrence/reoccurrence.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/steps/reoccurrence/reoccurrence.component.html
@@ -4,7 +4,8 @@
     <p>{{ "sgq.steps.step1.stepContentSubtitle1" | translate }}</p>
   </div>
   <div class="d-flex justify-content-end align-items-center mb-3">
-    <button class="btn btn-dark ml-3" (click)="openDialog()">
+    <button class="btn btn-dark ml-3"
+            style="background-color: #00344D;"(click)="openDialog()">
       {{ "sgq.steps.step1.selectReocurrence" | translate }}
       <i class="bi bi-file-earmark-medical"></i>
     </button>
@@ -83,10 +84,10 @@
 
 <p-confirmDialog #cd [style]="{ width: '50vw' }">
   <ng-template pTemplate="footer">
-    <button type="button" class="btn btn-outline-dark" (click)="cd.reject()">
+    <button type="button" class="btn btn-outline-warning" (click)="cd.reject()">
       {{ "global.reject" | translate }}
     </button>
-    <button type="button" class="btn btn-dark" (click)="cd.accept()">
+    <button type="button" class="btn btn-dark" style="background-color: #00344D;" (click)="cd.accept()">
       {{ "global.yesUndoReocurrence" | translate }}
     </button>
   </ng-template>
