--- a/src/app/pages/ncs/sgq-evaluation/steps/review-info-sgq/review-info-sgq.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/steps/review-info-sgq/review-info-sgq.component.html
@@ -36,7 +36,7 @@
           <i class="bi bi-link-45deg"></i>
           {{ "about.sgqEvalComponent.recurrence.title" | translate }}
         </p>
-        <button class="btn btn-dark red" (click)="goToStepById(0)">
+        <button class="btn btn-dark red" style="background-color: #00344D;" (click)="goToStepById(0)">
           <i class="bi bi-pencil mr-1"></i>
           {{ "global.edit" | translate }}
         </button>
@@ -120,7 +120,7 @@
           <i class="pi pi-compass"></i>
           {{ "about.sgqEvalComponent.evidence" | translate }}
         </p>
-        <button class="btn btn-dark red" (click)="goToStepById(1)">
+        <button class="btn btn-dark red" style="background-color: #00344D;" (click)="goToStepById(1)">
           <i class="bi bi-pencil mr-1"></i>
           {{ "global.edit" | translate }}
         </button>
@@ -158,7 +158,7 @@
           <i class="pi pi-compass"></i>
           {{ "about.sgqEvalComponent.risks" | translate }}
         </p>
-        <button class="btn btn-dark red" (click)="goToStepById(2)">
+        <button class="btn btn-dark red" style="background-color: #00344D;" (click)="goToStepById(2)">
           <i class="bi bi-pencil mr-1"></i>
           {{ "global.edit" | translate }}
         </button>
@@ -181,7 +181,7 @@
           <i class="bi bi-envelope-exclamation"></i>
           {{ "about.sgqEvalComponent.changes" | translate }}
         </p>
-        <button class="btn btn-dark red" (click)="goToStepById(3)">
+        <button class="btn btn-dark red" style="background-color: #00344D;" (click)="goToStepById(3)">
           <i class="bi bi-pencil mr-1"></i>
           {{ "global.edit" | translate }}
         </button>
@@ -204,7 +204,7 @@
           <i class="bi bi-envelope"></i>
           {{ "global.contacts.notifications" | translate }}
         </p>
-        <button class="btn btn-dark red" (click)="goToStepById(4)">
+        <button class="btn btn-dark red" style="background-color: #00344D;" (click)="goToStepById(4)">
           <i class="bi bi-pencil mr-1"></i>
           {{ "global.edit" | translate }}
         </button>
